--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -1,4 +1,5 @@
 .start-page {
+  width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -7,6 +8,8 @@
   padding: 10px;
   overflow: hidden;
   position: relative;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .start-container {
